RESOLVED FIXED100281
REGRESSION (r131793-r131826): Crash going to wikifonia.org
https://bugs.webkit.org/show_bug.cgi?id=100281
Summary REGRESSION (r131793-r131826): Crash going to wikifonia.org
miker304
Reported 2012-10-24 12:48:40 PDT
Crashes every time, going to the "wikifonia.org" page (a musicXML repository of songs) using latest nightly webkit (537.16+, downloaded and installed from "WebKit-SVN-r132362.dmg") on imac intel Core 2 Duo running mac osX 10.8.2, even after I reset safari (reset all choices) and reboot computer. This has been a guaranteed crash in at least the last three nightly webkits. (I only started using the website this week so I don't know whether it ever worked on webkit nightlys. "wikifonia.org" loads okay on this same mac under safari 6.0.1 (8536.26.14); google chrome version 22.0.1229.94; and firefox 15 I don't know how to test what part of the loading of the wikifonia page is crashing webkit...
Attachments
the patch (12.41 KB, patch)
2012-10-25 17:10 PDT, Filip Pizlo
oliver: review+
Alexey Proskuryakov
Comment 1 2012-10-24 17:10:46 PDT
Filip Pizlo
Comment 2 2012-10-25 17:10:27 PDT
Created attachment 170769 [details] the patch
Filip Pizlo
Comment 3 2012-10-25 17:41:45 PDT
Mark Lam
Comment 4 2012-10-25 18:32:23 PDT
Alexey Proskuryakov
Comment 5 2012-10-29 10:58:11 PDT
*** Bug 100600 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.