REGRESSION (r131793-r131826): Crash going to wikifonia.org https://bugs.webkit.org/show_bug.cgi?id=100281

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

Restore something that got lost in the resolve refactoring: the ability to give up on life if
we see a resolve of 'arguments'.

* runtime/JSScope.cpp:
(JSC::JSScope::resolveContainingScopeInternal):

LayoutTests:

* fast/js/jsc-test-list:
* fast/js/resolve-arguments-from-scope-expected.txt: Added.
* fast/js/resolve-arguments-from-scope.html: Added.
* fast/js/script-tests/resolve-arguments-from-scope.js: Added.
(bar):
(foo):



Canonical link: https://commits.webkit.org/118460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132546 268f45cc-cd09-0410-ab3c-d52691b4dbfc