third_party/WebKit/LayoutTests/fast/js/script-tests/resolve-arguments-from-scope.js
@@ -1,0 +1,23 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description(
+"Tests that doing repeated resolves of 'arguments' from some nested scope doesn't crash."
+);
+
+function bar() {
+    throw "omg";
+}
+
+function foo() {
+    try {
+        bar();
+    } catch (e) {
+        return arguments;
+    }
+}
+
+for (var i = 0; i < 100; ++i) {
+    shouldBe("foo(42)[0]", "42");
+    shouldBe("foo(42).length", "1");
+    shouldBe("foo(42, 23)[1]", "23");
+}
+
